@@ -19,6 +19,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 ****  Fix showing reference locations for BLKANDNBLK (#2170). [Yuri Victorovich]
 
+****  Fix genblk naming to match IEEE (#2686). [tinshark]
+
 
 * Verilator 4.106 2020-12-02
 
